--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,10 @@ jobs:
           node-version: '20.x'
       - name: Install Dependencies
         run: npm install
+      - name: Build Project 
+        run: npm run build
+      - name: Print Environment Variables 
+        run: printenv
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
