--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
     "express": "^4.19.2",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.4"
-  }
+  },
+"scripts": { 
+  "start": "react-scripts start", 
+  "build": "react-scripts build", 
+  "test": "react-scripts test", 
+  "eject": "react-scripts eject" 
+}
 }
