--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,8 +16,8 @@ jobs:
           node-version: '20.x'
       - name: Install Dependencies
         run: npm install
-      - name: Build Project 
-        run: npm run build
+      # - name: Build Project 
+      #   run: npm run build
       - name: Print Environment Variables 
         run: printenv
       - name: Deploy to Azure App Service
