--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,28 +1,61 @@
-name: Deploy to Azyre Web Service
+# name: Deploy to Azyre Web Service
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   buils-and-deploy:
+#     runs-on: windows-latest
+#     steps:
+#       - name: Checkout Source
+#         uses: actions/checkout@main
+#       - name: Setup Node.js Version
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20.x'
+#       - name: Install Dependencies
+#         run: npm install
+#       # - name: Build Project 
+#       #   run: npm run build
+#       - name: Print Environment Variables 
+#         run: printenv
+#       - name: Deploy to Azure App Service
+#         uses: azure/webapps-deploy@v2
+#         with:
+#           app-name: gmmcohrweb
+#           publish-profile: ${{ secrets.GMMCO_HR_COMMENTS }}
+#           package: .
+
+
+name: Backend Deployment
+
 on:
   push:
     branches:
-      - main
+      - main  # Adjust branch name as needed
 
 jobs:
-  buils-and-deploy:
-    runs-on: windows-latest
+  deploy:
+    runs-on: windows-latest  # Use windows-latest for Windows environment
+
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@main
-      - name: Setup Node.js Version
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-      - name: Install Dependencies
-        run: npm install
-      # - name: Build Project 
-      #   run: npm run build
-      - name: Print Environment Variables 
-        run: printenv
-      - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: gmmcohrweb
-          publish-profile: ${{ secrets.GMMCO_HR_COMMENTS }}
-          package: .
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20.x'  # Adjust Node.js version as needed
+
+    - name: Install dependencies
+      run: npm install  # Example for Node.js, adjust for your backend stack
+
+    
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'gmmcohrweb'
+        publish-profile: ${{ secrets.GMMCO_HR_COMMENTS }}
+        package: '.'  # Adjust based on your build output location
